XWIKI-20549: Provide a new script service API to check trustfulness of an URI
  * Define a new API in URLSecurityManager to check trustfulness of an
    URI
  * Use that API in XWikiServletResponse#redirect
  * Define a new script service API to perform same check in scripts